+ fng-str openmc 0.15.1 fendl results

--- a/models/fng_str/postprocessing.ipynb
+++ b/models/fng_str/postprocessing.ipynb
@@ -47,12 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read openmc results in results_database/\n",
-    "openmc_fendl3_file = ofb.ResultsFromDatabase('results_database/openmc-0-14-0_fendl32b.h5')\n",
+    "openmc_fendl3_file = ofb.ResultsFromDatabase('results_database/openmc-0-15-1_fendl32b.h5')\n",
     "openmc_endfb8_file = ofb.ResultsFromDatabase('results_database/openmc-0-14-0_endfb80.h5')\n",
     "openmc_jeff3_file = ofb.ResultsFromDatabase('results_database/openmc-0-14-0_jeff33.h5')"
    ]
@@ -411,7 +411,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "baby_neutronics",
+   "display_name": "openmc_env2",
    "language": "python",
    "name": "python3"
   },
