fng-w compare notebook refactoring

--- a/models/fng_w/compare_endfb.ipynb
+++ b/models/fng_w/compare_endfb.ipynb
@@ -22,7 +22,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import openmc_fusion_benchmarks as ofb"
+    "import openmc_fusion_benchmarks as ofb\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -221,10 +223,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import openmc_fusion_benchmarks as ofb\n",
-    "import numpy as np\n",
-    "\n",
     "for i,foil in enumerate(foil_list):\n",
     "\n",
     "    tally_name = f'rr_{foil}'\n",
